--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@bsmnt/drop": "^1.2.2",
     "basehub": "^9.0.20",
+    "clsx": "^2.1.1",
     "geist": "^1.4.2",
     "next": "15.3.5",
     "react": "^19.0.0",
